--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ ainsi qu'une grande expérience clinique.
 			<div class="item">
 			<h1>Nouveau ! Commandez le livre du Dr Brinette en ligne</h1>
 			<div class="descr">Pierre-Emmanuel Brinette, 24 septembre 2014</div>
-			<p>Il est maintenant possible d'acheter en ligne le livre du docteur Brinette via la plateforme PriceMinister.</p>
+			<p>Il est maintenant possible d'acheter en ligne le livre du docteur Brinette via la plateforme RAKUTEN.</p>
 
 
 <div style="width: 400px; margin: 0; background: white; border: 1px solid #ccc; padding: 10px 0; font-size: 12px; font-family: Arial, sans-serif; overflow:auto;">
-<a href="http://www.priceminister.com/offer/buy/49443944/Brinette-Jean-Louis-Etiomedecine---N-1---Etiomedecine-Livre.html" target="_blank">
+<a href="https://fr.shopping.rakuten.com/offer/buy/5064059683/etiomedecine-tome-1-format-auto-edition.html" target="_blank">
        <!-- <img src="http://external.priceminister.com/fmc/pic/0/www/www/40576/title_blog_advert.gif" height="22" width="382" border="0" style="padding: 0 0 5px 5px;" alt="Commander sur PriceMinister" /> -->
        <img src="img/200px-Logo_priceminister.svg.png" style="padding: 0 0 5px 14px;" alt="Commander sur PriceMinister" />
 </a>
